# hermes-widget

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  assets.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompactView.tsx  ExpandedView.tsx  Icons.tsx  StatCard.tsx  Widget.tsx
src/hooks/: useCounter.ts  useHermesData.ts
src/lib/: format.ts  theme.ts
src/types/: metrics.ts
