[package]
name = "hermes-widget"
version = "0.1.0"
description = "Frameless desktop widget for monitoring the Hermes AI agent"
authors = ["Hermes Widget Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hermes_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
